# InstrumentGenerator

./: .gitignore  CMakeLists.txt  README.md
source/: generator.cpp  generator.hpp  grammar.hpp  main.cpp
test/: grammarTest.cpp
